adding more to the project

--- a/index.html
+++ b/index.html
@@ -116,7 +116,46 @@
 				<section>The command line is your friend, Bash, ZSH, and mastering unix, going back to the origin of MS_DoS</section>
 				<!-- could have people pair up and share computers in pairs of 2-4 and create something or do an engaging exercise -->
 				
-				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools</section>
+				<section>
+
+						How AI was developed from transformers and then the invewntion has caused the growth and the parameter...
+
+						---
+
+						**1. Transformers enabled scale**
+						Self-attention allowed parallel processing, making it possible to train huge models efficiently.
+
+						---
+
+						**2. Parameters are learned weights**
+						They are numeric values that store patterns from data, not facts, but statistical relationships that create behavior.
+
+						---
+
+						**3. Scaling laws drove growth**
+						Researchers discovered that increasing model size, data, and compute reliably improves performance.
+
+						---
+
+						**4. Data quality matters as much as size**
+						Clean, diverse, deduplicated data is critical or large models learn noise and bias.
+
+						---
+
+						**5. Post-training creates usable intelligence**
+						Fine-tuning with human feedback (alignment) turns raw models into helpful, safe assistants.
+
+						---
+
+					AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools
+						- Meta-LLama API, if you identify as a developer
+						- Opencode, Warp, depending on the model and the usage, many open source models will allow trial runs and initial credits to try before you Pay-per-req
+						- DeepSeek is something that is going to be effective mostly when china is sleeping per the cost that you pay for it, but it will not be able to do high compute tasks.
+
+						- If you want the best of the best on a consistent then I recommend saving up to experience waves of the best compute and param models.
+
+
+				</section>
 
 				<section>Fun exercise mini demo, Using code to create music</section>
 
