adding more to intro

--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
 
 					Stay tuned for the coding demo at the end.
 
+					I believe that the most amount of millionaires and billionaires will be minted in the next 10 to 20 years. 
 
+					if your goal is probably not to chase money but maybe following your life's purpose. Then I think so much is being left on the table for the the everyday people who don't try to birth their ideas. Because tech and namely software creation is one of the greatest ways to build leverage for impact when you don't have the money to create a large startup.
+
+					This is for the everyday people that have a chance to reach hundreds, thousands, or even millions or billions of people to not just play small but to democratize the creation for value creation and make it accessible for even patient grandmothers and anyone with a desire to be something greater.
 				</p>
 				</section>
-				<section>Go around the class, have everyone say their name and what inspired them to learn about AI and the future of Tech.</section>
+				<section>Go around the class, have everyone say their name and what inspired them to learn about AI and the future of Tech.
+
+					Also do you guys have a general thing that you'd like to get out of this? (read the room and change the course to serve these people)
+				</section>
 
 				<section>Who Am I?
 					Add picture with Timur Garayev and beating a 2900 on lichess.
