updating the course

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 				<section>The Future of AI and Humanity</section>
 
-				<section>Dopamine Detox and Deciding a Price that you're willing to pay to get your ideas out into the world</section>
+				<section>Pulling the lever while still maintaining balance and health</section>
 				
 				<section>Coding Demo + TechNYC.io plug</section>
 
