--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 				<section>Go around the class, have everyone say their name and what inspired them to learn about AI and the future of Tech.
 
 					Also do you guys have a general thing that you'd like to get out of this? (read the room and change the course to serve these people)
+
+					Get started now resource packet
+
+				Elephant tied to rope
 				</section>
 
 				<section>Who Am I?
@@ -70,6 +74,8 @@
 				<section>What is System's Thinking: The person who implements systems thinking wins over the hardworking person who builds tech slowly.
 					<p>What Are SWARMS and how do they relate to systems thinking and automation? Multi-agent systems, the systems of the future along side operating in our physical world with smart infrastructure and IoT</p>
 					<p>Why AI is a Force Multiplier on effort and what that means for us? AI is a human auto-complete of sorts, more in terms of automation but is not yet outsourcing our creativity. But there are also many arguments that more powerful large language models allow for similar levels of creativity, paying a premium for this power of course.</p>
+
+
 					<p>Why everyone should consider becoming their own business entity and competing on the global market. Artificial intelligence and robotics are part of the technology wave projected to contribute trillions of dollars by the early 2030s, with AI alone expected to influence nearly every occupation and add as much as $13–$16 trillion in market value for major firms as adoption scales. Even though big tech companies publicly emphasize augmentation, frontier AI leaders report that automation is already reshaping hiring patterns, particularly for routine, entry‑level, and task-based work, and that up to 70% of current jobs could be replaced or delegated to AI systems within the next decade. This rapid shift makes entrepreneurial independence and lifelong adaptability increasingly valuable in a world where traditional employment structures are under pressure from emerging autonomous systems.</p>
 				</section>
 		
@@ -103,8 +109,10 @@
 					<p>The landscape over the next 3-7 years and beyond with stats to back it up</p>
 					<p>How can a non-technical person get started right now? Gaining the skills to close the gap and build systems and Apps that are made with the user in mind</p>
 					<p>Timing and shipping ideas for the long-game</p>
-					<p>Following your inspiration and the winner effect</p>
-					<p>Those willing to do the work will always outpace the 95%</p>
+					<p>Which language should I learn? Should I spend the time to learn a whole language or is it worth it to just leanr as I go and thej gain the skills as I spendd the time to </p>
+
+					<p>Those willing to do the work will always outpace the 95%, In a world of people conditioned to settle, the person who stays consistent, not saying hustle and grind, wins the race.. you are not competing with anyone else but instead I think the quest is take your own unique experience and tehn bake it into your application</p>
+					
 				</section>
 
 				<section>
@@ -168,7 +176,20 @@
 
 				<section>Take a Break</section>
 
-				<section>case studies Sdras and Penguins on Bread, you can do a lot of cool visual effects with very little code, leveraging JS</section>
+				<section>case studies Sdras and Penguins on Bread, you can do a lot of cool visual effects with very little code, leveraging JS
+
+					, Yeah. This is why I shell script penguins on bread video
+
+					and sdras codepen: 
+
+					https://codepen.io/sdras/pen/vbGMoz
+
+					https://codepen.io/sdras/pen/KGwpMR
+
+					https://codepen.io/sdras/pen/oEvzwJ
+
+					https://codepen.io/sdras/pen/gojoYb
+				</section>
 
 				<section>OpenCode: Replace the vibe with something better, Prompt Engineering for Dummies!</section>
 
