--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<p>Which language should I learn? Should I spend the time to learn a whole language or is it worth it to just leanr as I go and thej gain the skills as I spendd the time to </p>
 
 					<p>Those willing to do the work will always outpace the 95%, In a world of people conditioned to settle, the person who stays consistent, not saying hustle and grind, wins the race.. you are not competing with anyone else but instead I think the quest is take your own unique experience and tehn bake it into your application</p>
-					
+
 				</section>
 
 				<section>
@@ -191,16 +191,28 @@
 					https://codepen.io/sdras/pen/gojoYb
 				</section>
 
-				<section>OpenCode: Replace the vibe with something better, Prompt Engineering for Dummies!</section>
+				<section>OpenCode: Replace the vibe with something better, Prompt Engineering for Dummies!
+					- What are the elements of a prompt
+					- 
+				</section>
 
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer????</section>
 
 				<section>Syntax and PseudoCode, why you can Learn How to Learn. 
 
 					- Elephant connected to a pole, an elephant that doubts itself will not pull the stake out of the ground.
+
+					What is syntax... how to read it like english, logic vs intuition
+
+					In learning about syntax I think it's important to learn as you run into new ideas and concepts. One of the best ways to learn is through the adventure of building rather than being in a classroom and over conceptualizing the idea. Think of syntax as containers or boxes for meaning, it can often seem very binary but it makes up the skeleton of data, logic and rules.
+
+					But also writing your syntax in modular files allows you to separate code and keep things organized and also to separate global and local scope. Think of scope as elevators and escalators up levels, some there is a global scope that is shared and inherited from the top local scopes and other times you want to keep the meaning and the modularity just imported on on or a couple of building floors. Each floor represents the scope or the containment within your app state, and so you can have the global overall app state and then simultaneously have containment and smaller substates that opperate within the whole and make different features and processes available at will or concurrently to all of this.
+
 				</section>
 
-				<section>Generating an Idea worth your time. What am I solving and what is my intention for building this.</section>
+				<section>Generating an Idea worth your time. What am I solving and what is my intention for building this.
+					Having a compelling reason and purpose will allow you to access generate problem solving and creativity.
+				</section>
 
 				<section>Going from build to an app architecture</section>
 
@@ -208,7 +220,9 @@
 
 				<section>CyberSec, Robotics, and Ethical Hacking: Adopting other systems and frameworks and hardening your App's security</section>
 
-				<section>The Future of AI and Humanity</section>
+				<section>The Future of AI and Humanity
+					It's here to stay but what does the fugture look like if we're projected to wipe out 70% of jobs or more as an assumption of the biggest tech CEOs and what Elon and others are forging ahead to create.
+				</section>
 
 				<section>Pulling the lever while still maintaining balance and health</section>
 				
