--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 					It's here to stay but what does the fugture look like if we're projected to wipe out 70% of jobs or more as an assumption of the biggest tech CEOs and what Elon and others are forging ahead to create.
 				</section>
 
-				<section>Pulling the lever while still maintaining balance and health</section>
+				<section>Pulling the lever while still maintaining balance in life. Boredom is one of the rich person's ideas to success</section>
 				
 				<section>Coding Demo + TechNYC.io plug</section>
 
