adding git version control section

--- a/index.html
+++ b/index.html
@@ -384,6 +384,8 @@
 
 				</section>
 
+				<section>Version Control and git</section>
+
 				<section>
 					* Understand problem-solving logic before writing code
 					* Practice with whiteboarding exercises
