--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<img src="./vbmeme1.jpg" width="175" height="250">
 						<p class="fragment fade-up">AI is closing the technical gap for non-technical people</p>
 						<p class="fragment fade-up">Birth your ideas into the world</p>
-						<p class="fragment fade-up">Join the next wave of millionaires and creators</p>
+						<p class="fragment fade-up">Join the next wave of impact and creators</p>
 					</div>
 
 					<aside class="notes">
@@ -182,7 +182,7 @@
 				</section>
 
 				<section data-background-color="#2b2333">
-					<h2 style="color: #ffd7a1;">Security Threats in the AI Age</h2>
+					<h2 style="color: #ffd7a1;">Secuity: Attack Vectors in the age of AI</h2>
 					<p style="color: #f5e6f5; font-size: 0.8em; margin-bottom: 1em;">Businesses ship tech too fast for IT to keep up</p>
 					<div style="color: #f5e6f5; font-size: 0.75em;">
 						<p class="fragment">Scaling from 100 to 10,000 users overnight creates vulnerabilities</p>
