--- a/index.html
+++ b/index.html
@@ -235,9 +235,10 @@
 					<h2 style="color: #ffd7a1;">Secuity: Attack Vectors in the age of AI</h2>
 					<p style="color: #f5e6f5; font-size: 0.8em; margin-bottom: 1em;">Businesses ship tech too fast for IT to keep up</p>
 					<div style="color: #f5e6f5; font-size: 0.75em;">
-						<p class="fragment">Scaling from 100 to 10,000 users overnight creates vulnerabilities</p>
-						<p class="fragment">AI enables masterful malware and persistent access</p>
-						<p class="fragment highlight-red">How do you create robust systems against advanced threats?</p>
+						<p class="fragment">Scaling from 10 to 1000 users overnight</p>
+						<p class="fragment">China, Russia, North Korea,.. Less regulations on Gov Hackers etc</p>
+						<p class="fragment">AI enables malware-masterpieces, new forms of worms and trojans.. classes of info-stealers and data-exfiltration.. and no you cannot remove all of your info from data brokers or the dark web..</p>
+						<p class="fragment highlight-red">How do you create robust systems</p>
 					</div>
 
 					<aside class="notes">
@@ -325,7 +326,7 @@
 				</section>
 
 				<section data-background-color="#1a2433">
-					<h2 style="color: #b7d4ff;">Version Control and git</h2>
+					<h2 style="color: #b7d4ff;">Let's get started (Command line Exercise)</h2>
 					<div style="color: #e7f5ff; font-size: 0.85em; margin-top: 2em;">
 						<ul>
 							<li class="fragment">Track changes and collaborate with others</li>
